--- a/app/assets/stylesheets/textsize.css.scss
+++ b/app/assets/stylesheets/textsize.css.scss
@@ -16,6 +16,17 @@
   color: #999;
 }
 
+.weeklystatus {
+  margin-top: 10px;
+  margin-bottom: 30px;
+  margin-left: 10px;
+  margin-right: 10px;
+  padding: 10px;
+  background-color: WhiteSmoke;
+  border: 1px solid;
+  color: #999;
+}
+
 .alarmtext {
 	color: Red;
 	margin: 10px;
