--- a/app/views/achivements/_engineer.html.erb
+++ b/app/views/achivements/_engineer.html.erb
@@ -1,27 +1,25 @@
 
-<h2>Test Case Running</h2><hr>
-<div class="row">
+<h2>Test Case Running</h2>
+<div class="weeklystatus">
 	<% if @myexecutions != nil then %>
 		<% @myexecutions.each do |e| %>
-			<div class="span8 offset1">
-				Run Case: <%= e.testcase.name if e.testcase != nil %> <%= e.device.name if e.device != nil %> On Server: <%= e.sysconfig.sut.name if e.sysconfig.sut != nil %>
-			</div>
+				&nbsp;&nbsp;&nbsp;* <%= e.testcase.name if e.testcase != nil %> <%= e.device.name if e.device != nil %> On Server: <%= e.sysconfig.sut.name if e.sysconfig.sut != nil %><br>
 		<% end %>
 	<% else %>
 		<div class="span8">Never Run Any Testcases<%= c.sut_id %></div>
 	<% end %>
 </div>
 
-<br><h2>System Configuration</h2><hr>
-<div class="row">
+<br><h2>System Configuration</h2>
+<div class="weeklystatus">
 	<% if @mysysconfigurations != nil then %>
 		<% @mysysconfigurations.each do |c| %>
 			<% if c.devices.any? then %>
-			<div class="span8 offset1">Config Server <%= c.sut.system.name if c.sut != nil %> <%= c.sut.name if c.sut != nil %> to configs as below:</div>
+			&nbsp;&nbsp;&nbsp;* Config Server <%= c.sut.system.name if c.sut != nil %> <%= c.sut.name if c.sut != nil %> to configs as below:<br>
 			<% c.devices.order.each do |d|  %>
 				<% if d.devicetype.devicecate == "Hardware" then %>
 					<% @position = Sysconfigrelationship.find_by_sysconfig_id_and_device_id(c.id, d.id).position %>
-					<div class="span11 offset1"><div class="span5"><%= d.name %></div> <div class="span4">Located at position:<%= @position %></div></div>
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;* <%= d.name %> at position:<%= @position %><br>
 				<% end %>
 			<% end %>
 			<% end %>
