--- a/app/views/achivements/_header_list.html.erb
+++ b/app/views/achivements/_header_list.html.erb
@@ -1,3 +1,2 @@
-<div class="span10">
-<h1>Good For You!  Here Are Your Achievements!</h1>
-</div>
+
+<h1>BRAVO! Weekly status from <%= @currentweekbegin %> to <%= @currentweekend %></h1>
