--- a/app/views/executions/_testcases_list.html.erb
+++ b/app/views/executions/_testcases_list.html.erb
@@ -10,7 +10,11 @@ function changeresulttype() {
 --></script>
 
 <% if @selectsut != nil then %>
-	<h2>Execute A Testcase</h2>
+
+	<h2>Execute A Testcase On <%= @sysconfig.sut.name %></h2>
+	<h4>Current FW is: <%= if @sysconfig.current_bios != nil then @sysconfig.current_bios.name else "None" end %></h4><br>
+	<h4>Current OS is: <%= if @sysconfig.current_os != nil then @sysconfig.current_os.name else "None" end %></h4><hr>
+
 	<div class="row">
 		<%= form_tag controller: "executions", action: "selecttype" do %>
 			<%= hidden_field_tag(:selectsut, @selectsut) %>
@@ -46,14 +50,14 @@ function changeresulttype() {
 	<ul>
 		<% if @executions != nil then if @executions.count != 0 then %>
 			<table class="table table-striped table-bordered table-condensed">
-				<tr><td>Case Name</td><td>Result</td><td>More Info</td><td>Tester</td><td>Operation</td></tr>
+				<tr><td>Case Name</td><td>Result</td><td>More Info</td><td>Tester</td><td>Opt</td></tr>
 				<% @executions.each do |d| %>
 					<tr>
 						<td><%= d.testcase.name if d.testcase != nil %></td>
 						<td><%= d.result %></td>
 						<td><%= if d.result == "fail" then "CR:" + d.bug else d.bug end %></td>
 						<td><%= d.user.email if d.user != nil %></td>
-						<td><%= link_to "delete", d, method: :delete, data: { confirm: "Sure?" }, class: "" if d.user_id == current_user.id %></td>
+						<td><%= link_to "x", d, method: :delete, data: { confirm: "Sure?" }, class: "" if d.user_id == current_user.id %></td>
 					</tr>
 				<% end %>
 			</table>
