--- a/app/views/devices/_devices_list.html.erb
+++ b/app/views/devices/_devices_list.html.erb
@@ -3,12 +3,15 @@
 <ul>
 	<% if @devicelist != nil then if @devicelist.count != 0 then %>
 		<table class="table table-striped table-bordered table-condensed">
-		<tr><td>Device Name</td><td>Count Num</td><td>Operation</td></tr>
+		<tr><td>Device Name</td><td>Count Num</td><td></td></tr>
 		<% @devicelist.each do |d| %>
 			<tr>
-				<td><%= d.name %></td>
+				<td onmouseover="ShowContent('<%= d.name %>');" onmouseout="HideContent('<%= d.name %>');">
+					<%= link_to d.name, edit_device_path(d),:onclick=>"window.open(this.href,'create_company', 'height=600, width=600');return false;" %>
+				</td>
+				<div id='<%= d.name %>' class="showmoreinfo">Note:<hr><%= simple_format(d.note) %></div>
 				<td><%= d.countnum %></td>
-				<td><%= link_to "delete", d, method: :delete, data: { confirm: "Sure?" }, class: "" %></td>
+				<td><%= link_to "x", d, method: :delete, data: { confirm: "Sure?" }, class: "" %></td>
 			</tr>
 		<% end %>
 		</table>
