--- a/app/views/sysconfigs/_sysconfigs_list.html.erb
+++ b/app/views/sysconfigs/_sysconfigs_list.html.erb
@@ -19,14 +19,15 @@
 	
 	<table class="table table-striped table-bordered table-condensed">
 		<% if @currentsysconfig.sysconfigrelationships.count != 0 then %>
-			<tr><td>Name</td><td>Type</td><td>Position</td><td>Operation</td></tr>
+			<tr><td>Name</td><td>Type</td><td>Position</td><td></td></tr>
 			<% @currentsysconfig.sysconfigrelationships.each do |d| %>
 				<% tmpdevice = Device.find_by_id(d.device_id) %>
 				<% if tmpdevice != nil then if tmpdevice.devicetype.devicecate == "Hardware" then %><tr>
-					<td><%= tmpdevice.name %></td>
+					<td onmouseover="ShowContent('<%= tmpdevice.name %>');" onmouseout="HideContent('<%= tmpdevice.name %>');"><%= tmpdevice.name %></td>
+					<div id='<%= tmpdevice.name %>' class="showmoreinfo">Note:<hr><%= simple_format(tmpdevice.note) %></div>
 					<td><%= tmpdevice.devicetype.name %></td>
 					<td><%= d.position %></td> 
-					<td><%= link_to "delete", d, method: :delete, data: { confirm: "Sure?" }, class: "toright" if @editable %></td>
+					<td><%= link_to "x", d, method: :delete, data: { confirm: "Sure?" }, class: "toright" if @editable %></td>
 				</tr><% end end %>
 			<% end %>
 		<% else %>
