--- a/app/views/systems/_devices_list.html.erb
+++ b/app/views/systems/_devices_list.html.erb
@@ -3,16 +3,17 @@
 <ul>
 	<% if @devicelist != nil then %>
 		<table class="table table-striped table-bordered table-condensed">
-			<tr><td>Device Name</td><td>Type</td><% if @selectcate == "Hardware" then %> <td>Max Cfg</td> <% end %><td>Opt</td></tr>
+			<tr><td>Device Name</td><td>Type</td><% if @selectcate == "Hardware" then %> <td>Max Cfg</td> <% end %><td></td></tr>
 			<% @devicelist.each do |d| %>
 				<% if d.devicetype.devicecate == @selectcate then%>
 				<tr>
-					<td><%= d.name %></td>
+					<td onmouseover="ShowContent('<%= d.name %>');" onmouseout="HideContent('<%= d.name %>');"><%= d.name %></td>
+					<div id='<%= d.name %>' class="showmoreinfo">Note:<hr><%= simple_format(d.note) %></div>
 					<td><%= d.devicetype.name%></td> 
 					<% if @selectcate == "Hardware" then %>
 						<td><%= Avlrelationship.find_by_system_id_and_device_id(@selectsystem, d.id).maxnum %></td> 
 					<% end %>
-					<td><%= link_to "del", Avlrelationship.find_by_system_id_and_device_id(@selectsystem,d.id), method: :delete, data: { confirm: "Sure?" }, class: "" if current_user == System.find_by_id(@selectsystem).user%></td>
+					<td><%= link_to "x", Avlrelationship.find_by_system_id_and_device_id(@selectsystem,d.id), method: :delete, data: { confirm: "Sure?" }, class: "" if current_user == System.find_by_id(@selectsystem).user%></td>
 				</tr>
 				<% end %>
 			<% end %>
