--- a/app/views/testcases/_testcases_list.html.erb
+++ b/app/views/testcases/_testcases_list.html.erb
@@ -3,13 +3,20 @@
 <% if @testcases != nil then %>
 	<% if @testcases.count != 0 then %>
 		<table class="table table-striped table-bordered table-condensed">
-			<tr><td>TestCase Name</td><td>TestCase Parameter</td><td>Designed By</td><td>Operation</td></tr>
+			<tr><td>TestCase Name</td><td>TestCase Parameter</td><td>Designed By</td><td></td></tr>
 			<% @testcases.each do |d| %>
 				<tr>
-					<td><%= d.name %></td>
+					<td onmouseover="ShowContent('<%= d.name %>');" onmouseout="HideContent('<%= d.name %>');">
+						<% if current_user.root? or current_user == d.user then%>
+							<%= link_to d.name, edit_testcase_path(d), :onclick=>"window.open(this.href,'create_company', 'height=500, width=600');return false;" %>
+						<% else %>
+							<%= d.name %>
+						<% end %>
+					</td>
+					<div id='<%= d.name %>' class="showmoreinfo">Execution Steps:<hr><%= simple_format(d.steps) %></div>
 					<td><%=if d.devicetype != nil then d.devicetype.name else "None" end %></td>
 					<td><%= d.user.email if d.user != nil %></td>
-					<td><%= link_to "delete", d, method: :delete, data: { confirm: "Sure?" }, class: "toright" if current_user.root? or current_user == d.user %></td>
+					<td><%= link_to "x", d, method: :delete, data: { confirm: "Sure?" }, class: "toright" if current_user.root? or current_user == d.user %></td>
 				</tr>
 			<% end %>
 		</table>
