--- a/app/views/tasks/_detail_list.html.erb
+++ b/app/views/tasks/_detail_list.html.erb
@@ -1,12 +1,19 @@
-<h2>Task Objects - <%= @totalcases %>cases have been run
+<% if @target != nil then %>
+<h2>"<%= @target.name %>" - RE: <%= @target.user.email if @target.user != nil %></h2>
+<% end %>
+
 <div class="toright">
-	<%= form_tag controller: "tasks", action: "calculate" do %>
-		<%= hidden_field_tag(:selecttask, @selecttask) %>
-		<%= hidden_field_tag(:selecttarget, @selecttarget) %>
-		<div class="span3"><%= submit_tag "Status" , :class => "submit btn btn-large btn-danger" %></div>
+	<% if current_user.lead? then %>
+		<div class="row">
+			<%= form_tag controller: "tasks", action: "selectuser" do %>
+				<%= hidden_field_tag(:selecttask, @selecttask) %>
+				<%= hidden_field_tag(:selecttarget, @selecttarget) %>
+				<div class="span5">Assign Target to: <%= select_tag 'selectuser', options_from_collection_for_select( @users, :id, :email) %></div>
+				<div class="span2"><%= submit_tag "OK" , :class => "submit btn btn-primary btn-success" %></div>
+			<% end %>
+		</div>
 	<% end %>
-</div>	
-</h2>
+</div>
 
 <% if @taskobjects != nil then %>
 	<table class="table table-striped table-bordered table-condensed">
@@ -42,36 +49,43 @@
 <!-- Title of Matrix and Creation of new matrix -->
 		<h2>
 			<div>"<%= @target.name %>" Test Matrixes</div>
+<!--
 			<%= form_tag controller: "tasks", action: "addtagertenv" do %>
 				<%= hidden_field_tag(:selecttask, @selecttask) %>
 				<%= hidden_field_tag(:selecttarget, @selecttarget) %>
 				<div class="span2 toright"><%= submit_tag "+ Matrix" , :class => "submit  btn btn-success" %></div>
 			<% end %>
+-->
 		</h2>
 
 <!-- Draw tables -->		
 		<% @targetenvlist.each do |t|%>
+			<td class="textsize6"> <div class ="row">
+				<div class="span">
+				<%= form_tag controller: "tasks", action: "adddevice" do %>
+					<%= hidden_field_tag(:selecttask, @selecttask) %>
+					<%= hidden_field_tag(:selecttarget, @selecttarget) %>
+					<%= hidden_field_tag(:selecttargetenv, t.id) %>
+					<div class="span">DEVICES for X: <%= select_tag 'selectdevice', options_from_collection_for_select( @devices, :id, :name), :class => "textsize6" if @devices != nil %></div>
+					<div class="span"><%= submit_tag "+" , :class => "submit  btn btn-primary" %></div>
+				<% end %>
+				</div>
+				<div class="span">
+				<%= form_tag controller: "tasks", action: "addtestcase" do %>
+					<%= hidden_field_tag(:selecttask, @selecttask) %>
+					<%= hidden_field_tag(:selecttarget, @selecttarget) %>
+					<%= hidden_field_tag(:selecttargetenv, t.id) %>
+					<div class="span">TESTCASE for Y: <%= select_tag 'selecttestcase', options_from_collection_for_select( @testcases, :id, :name), :class => "textsize6"  %></div>
+					<div class="span"><%= submit_tag "+" , :class => "submit  btn btn-primary" %></div>
+				<% end %>
+				</div>
+				</div>
+			</td>
 			<table class="table table-striped table-bordered table-condensed">
 				<% @colum = 0 %>
 				<tr>
 <!-- First line is testcase list -->
-					<td class="textsize6"> <div class ="row">
-						<div class="span8">
-						<%= form_tag controller: "tasks", action: "addtestcase" do %>
-							<%= hidden_field_tag(:selecttask, @selecttask) %>
-							<%= hidden_field_tag(:selecttarget, @selecttarget) %>
-							<%= hidden_field_tag(:selecttargetenv, t.id) %>
-							<div class="span"><%= select_tag 'selecttestcase', options_from_collection_for_select( @testcases, :id, :name), :class => "textsize4", onchange: "this.form.submit();"  %></div>
-						<% end %>
-						</div><div class="span8">
-						<%= form_tag controller: "tasks", action: "adddevice" do %>
-							<%= hidden_field_tag(:selecttask, @selecttask) %>
-							<%= hidden_field_tag(:selecttarget, @selecttarget) %>
-							<%= hidden_field_tag(:selecttargetenv, t.id) %>
-							<div class="span"><%= select_tag 'selectdevice', options_from_collection_for_select( @devices, :id, :name), :class => "textsize4", onchange: "this.form.submit();" if @devices != nil %></div>
-						<% end %>
-						</div></div>
-					</td>
+					<td></td>
 					<% t.targetcaserelationships.each do |c| %>
 						<td><%= link_to c.testcase.name, c, method: :delete, data: { confirm: "Sure?" }, class: "" if current_user.lead? %></td>
 						<% @colum = @colum + 1 %>
