--- a/app/views/tasks/_task_list.html.erb
+++ b/app/views/tasks/_task_list.html.erb
@@ -4,49 +4,62 @@ function detailinfo(para1, para2) {
   document.getElementById(para1).style.display=para2;
 }
 --></script>
-
-<%= form_tag controller: "tasks", action: "selecttask" do %>
-	<% if @tasklist != nil then if @tasklist.count != 0 then %>
-	<h2>Task List</h2>
-		<% @tasklist.each do |t| %>
-			<div class="row">
-				<%= radio_button_tag "selecttask", t.id, if @selecttask.to_i == t.id then true else false end, onchange: "this.form.submit();", class: "span3"  %><%= t.name %>
-				<td><%= link_to "x", t, method: :delete, data: { confirm: "Sure?" }, class: "toright" if current_user.lead? %></td>
-			</div>
+<div class="row-fluid">
+	<div class="span3">
+		<h1>My Tasks</h1>
+	</div>
+	<div class="span3">
+		<div class="span">
+		<%= form_tag controller: "tasks", action: "selecttask" do %>
+			<% if @tasklist != nil then if @tasklist.count != 0 then %>
+				<%= select_tag 'selecttask', options_from_collection_for_select( @tasklist, :id, :name, @selecttask.to_i ), :class => "textsize10", onchange: "this.form.submit();"  %>
+				<div class="span toright"><%= link_to "x", @task, method: :delete, data: { confirm: "Sure?" }, class: "" if current_user.lead? %></div>
+			<% else %>
+				<h2><br>No tasks existed</h2>
+			<% end %>
+			<% else %>
+				<h2><br>No tasks existed</h2>
+			<% end %>
 		<% end %>
-	<% else %>
-		<h2><br>No tasks existed</h2>
-	<% end %>
-	<% else %>
-		<h2><br>No tasks existed</h2>
-	<% end %>
-<% end %>
-<% if current_user.lead? then %>
-	<%= form_tag controller: "tasks", action: "addtask" do |t| %>
-		<div><%= text_field_tag :name,"",placeholder: "Add New Task", onfocus: 'detailinfo("detailtask","block")' %></div>
-		<div id="detailtask", style="display:none"><%= select_tag 'selectsystem', options_from_collection_for_select( @systems, :id, :name) %>
-		<%= text_area_tag :note, "",placeholder: "Note..." %>
-		<%= submit_tag "Add New Task" , :class => "submit btn btn-mini btn-danger" %></div>
-	<% end %>
-<% end %>
+		</div><div class="span">
+		<% if current_user.lead? then %>
+			<%= form_tag controller: "tasks", action: "addtask" do |t| %>
+				<div><%= text_field_tag :name,"",placeholder: "Add New Task", onfocus: 'detailinfo("detailtask","block")' %></div>
+				<div id="detailtask", style="display:none"><%= select_tag 'selectsystem', options_from_collection_for_select( @systems, :id, :name) %>
+				<%= text_area_tag :note, "",placeholder: "Note..." %>
+				<%= submit_tag "Add New Task" , :class => "submit btn btn-mini btn-danger" %></div>
+			<% end %>
+		<% end %>
+		</div>
+	</div>
+	<div class="span4">
 
-<% if @selecttask != nil then %>
-	<%= form_tag controller: "tasks", action: "selecttarget" do %>
-		<%= hidden_field_tag(:selecttask, @selecttask) %>
-		<h2><%= @task.name %> Targets</h2>
-		<% if @targetlist != nil then @targetlist.each do |ta| %>
-			<div class="row">
-				<%= radio_button_tag "selecttarget", ta.id, if @selecttarget.to_i == ta.id then true else false end, onchange: "this.form.submit();", class: "span3"  %><%= ta.name %>
-			</div>
-		<% end end %>
-	<% end %>
+		<% if @selecttask != nil then %>
+		<div class="span">
+			<%= form_tag controller: "tasks", action: "selecttarget" do %>
+				<%= hidden_field_tag(:selecttask, @selecttask) %>
+				<%= select_tag 'selecttarget', options_from_collection_for_select( @targetlist, :id, :name, @selecttarget.to_i ), :class => "textsize10", onchange: "this.form.submit();"  if @targetlist != nil%>
+				<%= link_to "x", @target, method: :delete, data: { confirm: "Sure?" }, class: "" if current_user.lead? if @target != nil %>
+			<% end %>
+		</div><div class="span">	
+			<% if current_user.lead? then %>
+				<%= form_tag controller: "tasks", action: "addtarget" do |t| %>
+					<%= hidden_field_tag(:selecttask, @selecttask) %>
+					<div><%= text_field_tag :name,"",placeholder: "Add New Target", onfocus: 'detailinfo("detailtarget","block")' %></div>
+					<div id = "detailtarget", style="display:none"><%= text_area_tag :note, "", :class => "textsize8", placeholder: "Note..." %>
+					<%= submit_tag "Add New Target" , :class => "submit btn btn-mini btn-danger" %></div>
+				<% end %>
+			<% end %>
+		<% end %>
+		</div>
+	</div>
 	
-	<% if current_user.lead? then %>
-		<%= form_tag controller: "tasks", action: "addtarget" do |t| %>
+	<div class="span toright">
+		<%= form_tag controller: "tasks", action: "calculate" do %>
 			<%= hidden_field_tag(:selecttask, @selecttask) %>
-			<div><%= text_field_tag :name,"",placeholder: "Add New Target", onfocus: 'detailinfo("detailtarget","block")' %></div>
-			<div id = "detailtarget", style="display:none"><%= text_area_tag :note, "",placeholder: "Note..." %>
-			<%= submit_tag "Add New Target" , :class => "submit btn btn-mini btn-danger" %></div>
+			<%= hidden_field_tag(:selecttarget, @selecttarget) %>
+			<div class="span3"><%= submit_tag "Status" , :class => "submit btn btn-large btn-danger" if current_user.lead? %></div>
 		<% end %>
-	<% end %>
-<% end %>
+	</div>
+
+</div>
