--- a/app/views/tasks/_task_list.html.erb
+++ b/app/views/tasks/_task_list.html.erb
@@ -12,8 +12,8 @@ function detailinfo(para1, para2) {
 		<div class="span">
 		<%= form_tag controller: "tasks", action: "selecttask" do %>
 			<% if @tasklist != nil then if @tasklist.count != 0 then %>
-				<%= select_tag 'selecttask', options_from_collection_for_select( @tasklist, :id, :name, @selecttask.to_i ), :class => "textsize10", onchange: "this.form.submit();"  %>
-				<div class="span toright"><%= link_to "x", @task, method: :delete, data: { confirm: "Sure?" }, class: "" if current_user.lead? %></div>
+				<%= select_tag 'selecttask', options_from_collection_for_select( @tasklist, :id, :name, @selecttask ), :class => "textsize8", onchange: "this.form.submit();"  %>
+				<%= link_to "x", @task, method: :delete, data: { confirm: "Sure?" }, class: "" if current_user.lead? %>
 			<% else %>
 				<h2><br>No tasks existed</h2>
 			<% end %>
@@ -38,11 +38,11 @@ function detailinfo(para1, para2) {
 		<div class="span">
 			<%= form_tag controller: "tasks", action: "selecttarget" do %>
 				<%= hidden_field_tag(:selecttask, @selecttask) %>
-				<%= select_tag 'selecttarget', options_from_collection_for_select( @targetlist, :id, :name, @selecttarget.to_i ), :class => "textsize10", onchange: "this.form.submit();"  if @targetlist != nil%>
-				<%= link_to "x", @target, method: :delete, data: { confirm: "Sure?" }, class: "" if current_user.lead? if @target != nil %>
+				<%= select_tag 'selecttarget', options_from_collection_for_select( @targetlist, :id, :name, @selecttarget ), :class => "textsize8", onchange: "this.form.submit();"  if @targetlist != nil%>
+				<%= link_to "x", @target, method: :delete, data: { confirm: "Sure?" }, class: "" if current_user.lead? and @target != nil %>
 			<% end %>
 		</div><div class="span">	
-			<% if current_user.lead? then %>
+			<% if current_user.lead? and @target != nil then %>
 				<%= form_tag controller: "tasks", action: "addtarget" do |t| %>
 					<%= hidden_field_tag(:selecttask, @selecttask) %>
 					<div><%= text_field_tag :name,"",placeholder: "Add New Target", onfocus: 'detailinfo("detailtarget","block")' %></div>
