--- a/app/views/tasks/_detail_list.html.erb
+++ b/app/views/tasks/_detail_list.html.erb
@@ -17,14 +17,17 @@
 
 <% if @taskobjects != nil then %>
 	<table class="table table-striped table-bordered table-condensed">
-		<tr><td>Task Objects Name</td><td>Finish Status</td><td></td></tr>
+		<tr><td>Task Objects Name</td><td>Release Date</td><td>Finish Status (one # for 10 cases)</td><td></td></tr>
 		<% @taskobjects.each do |t| %>
-			<tr><td><%= t.device.name %></td>
+			<tr><td><%= t.device.name %></td><td><%= t.device.created_at.to_date %></td>
 			<td>
-			<%= t.device.realexecutions.count %>
-			</td><td></td></tr>
+				<% (t.device.realexecutions.count / 10 + 1).times do %>
+					<font color=green>#</font>
+				<% end %>
+			</td>
+			<td></td></tr>
 		<% end %>
-		<% if @devices != nil then %>
+		<% if @devices != nil and current_user == @task.user then %>
 			<tr>
 				<td>
 					<%= form_tag controller: "tasks", action: "addtaskobject" do %>
@@ -60,7 +63,7 @@
 
 <!-- Draw tables -->		
 		<% @targetenvlist.each do |t|%>
-			<td class="textsize6"> <div class ="row">
+			<% if current_user == @task.user then %>
 				<div class="span">
 				<%= form_tag controller: "tasks", action: "adddevice" do %>
 					<%= hidden_field_tag(:selecttask, @selecttask) %>
@@ -79,8 +82,7 @@
 					<div class="span"><%= submit_tag "+" , :class => "submit  btn btn-primary" %></div>
 				<% end %>
 				</div>
-				</div>
-			</td>
+			<% end %>
 			<table class="table table-striped table-bordered table-condensed">
 				<% @colum = 0 %>
 				<tr>
@@ -113,7 +115,11 @@
 								<% currentexecutions = thematrix.select { |mx| mx.device_id == d.device_id and  mx.testcase_id == c.testcase_id } %>
 								<% if currentexecutions.count != 0 then %>
 									<% currentexecutions.each do |m| %>
-										<%= m.execution.result if m.execution != nil %>
+										<% if m.execution.result == "fail" then %>
+											<font color=red>x</font>
+										<% else %>
+											<font color=green>v</font>
+										<% end %>
 									<% end %>
 								<% else %>
 									NR
