--- a/app/views/tasks/_detail_list.html.erb
+++ b/app/views/tasks/_detail_list.html.erb
@@ -1,5 +1,5 @@
 <% if @target != nil then %>
-<h2>"<%= @target.name %>" - <%= @target.user.email if @target.user != nil %></h2>
+<h2>"<%= @task.name %>"</h2>
 <% end %>
 
 <div class="toright">
@@ -51,7 +51,7 @@
 	
 <!-- Title of Matrix and Creation of new matrix -->
 		<h2>
-			<div>"<%= @target.name %>" Test Matrixes</div>
+			<div>"<%= @target.name %>" - <%= @target.user.email if @target.user != nil %> </div>
 <!--
 			<%= form_tag controller: "tasks", action: "addtagertenv" do %>
 				<%= hidden_field_tag(:selecttask, @selecttask) %>
@@ -64,30 +64,48 @@
 <!-- Draw tables -->		
 		<% @targetenvlist.each do |t|%>
 			<% if current_user == @task.user then %>
+<!-- Select X -->
 				<div class="span">
 				<%= form_tag controller: "tasks", action: "adddevice" do %>
 					<%= hidden_field_tag(:selecttask, @selecttask) %>
 					<%= hidden_field_tag(:selecttarget, @selecttarget) %>
 					<%= hidden_field_tag(:selecttargetenv, t.id) %>
-					<div class="span">DEVICES for X: <%= select_tag 'selectdevice', options_from_collection_for_select( @devices, :id, :name), :class => "textsize6" if @devices != nil %></div>
+					<div class="span">DEVICES for X: <%= select_tag 'selectdevice', options_from_collection_for_select( @devices, :id, :name), :class => "textsize4" if @devices != nil %></div>
 					<div class="span"><%= submit_tag "+" , :class => "submit  btn btn-primary" %></div>
 				<% end %>
 				</div>
+<!-- Select Y -->
 				<div class="span">
 				<%= form_tag controller: "tasks", action: "addtestcase" do %>
 					<%= hidden_field_tag(:selecttask, @selecttask) %>
 					<%= hidden_field_tag(:selecttarget, @selecttarget) %>
 					<%= hidden_field_tag(:selecttargetenv, t.id) %>
-					<div class="span">TESTCASE for Y: <%= select_tag 'selecttestcase', options_from_collection_for_select( @testcases, :id, :name), :class => "textsize6"  %></div>
+					<div class="span">TESTCASE for Y: <%= select_tag 'selecttestcase', options_from_collection_for_select( @testcases, :id, :name), :class => "textsize4"  %></div>
 					<div class="span"><%= submit_tag "+" , :class => "submit  btn btn-primary" %></div>
 				<% end %>
 				</div>
 			<% end %>
-			<table class="table table-striped table-bordered table-condensed">
+<!-- Select Env -->
+			<div class="span">
+				<%= form_tag controller: "tasks", action: "adddepdevice" do %>
+					<%= hidden_field_tag(:selecttask, @selecttask) %>
+					<%= hidden_field_tag(:selecttarget, @selecttarget) %>
+					<%= hidden_field_tag(:selecttargetenv, t.id) %>
+					<div class="span">SHOW ENVIRONMENT: <%= select_tag 'selectdevice', options_from_collection_for_select( @devices, :id, :name), :class => "textsize4"  %></div>
+					<div class="span"><%= submit_tag "+" , :class => "submit  btn btn-primary" %></div>
+				<% end %>
+			</div>
+			
+			<% thematrix = t.targetmatrixes %>
+			<table class="table table-bordered table-condensed">
 				<% @colum = 0 %>
 				<tr>
 <!-- First line is testcase list -->
 					<td></td>
+					<% if t.targetdeprelationships.count != 0 then%>
+						<% depexist = true %>
+						<td></td>
+					<% end %>
 					<% t.targetcaserelationships.each do |c| %>
 						<td>
 							<% if current_user.lead? then %>
@@ -99,8 +117,10 @@
 						<% @colum = @colum + 1 %>
 					<% end %>
 				</tr>
+<!-- Draw each lines -->				
 				<% t.targetenvrelationships.each do |d| %>
 					<tr>
+	<!-- The first row -->
 						<td>
 							<% if current_user.lead? then %>
 								<%= link_to d.device.name, d, method: :delete, data: { confirm: "Sure?" }, class: "" %>
@@ -108,10 +128,10 @@
 								<%= d.device.name %>
 							<% end %>
 						</td>
-						<% thematrix = t.targetmatrixes %>
+						<% if depexist then %> <td>Over All</td> <% end %>
 						<% t.targetcaserelationships.each do |c| %>
 							<td>
-<!-- test result will be filled here -->
+<!-- test total result will be filled here, a new line -->
 								<% currentexecutions = thematrix.select { |mx| mx.device_id == d.device_id and  mx.testcase_id == c.testcase_id } %>
 								<% if currentexecutions.count != 0 then %>
 									<% currentexecutions.each do |m| %>
@@ -121,13 +141,35 @@
 											<font color=green>v</font>
 										<% end %>
 									<% end %>
-								<% else %>
-									NR
 								<% end %>
-<!-- test result has been filled now -->
 							</td>
 						<% end %>
 					</tr>
+<!-- test environment result, if there're any,  will be filled here -->
+					<% if depexist then %> 
+						<% t.targetdeprelationships.each do |dep| %>
+							<tr><td></td>
+								<td><%= link_to dep.device.name, dep, method: :delete, data: { confirm: "Sure?" }, class: "" %></td>
+								<% t.targetcaserelationships.each do |c| %>
+									<td>
+										<% currentexecutions = thematrix.select { |mx| mx.device_id == d.device_id and  mx.testcase_id == c.testcase_id } %>
+										<% if currentexecutions.count != 0 then %>
+											<% currentexecutions.each do |m| %>
+												<% if m.execution.realconfig.include? dep.device then %>
+													<% if m.execution.result == "fail" then %>
+														<font color=red>x</font>
+													<% else %>
+														<font color=green>v</font>
+													<% end %>
+												<% end %>
+											<% end %>
+										<% end %>
+									</td>
+								<% end %>
+							</tr>
+						<% end %>
+					<% end %>
+
 				<% end %>		
 			</table>
 		<% end %>
