--- a/app/views/executions/_testcases_list.html.erb
+++ b/app/views/executions/_testcases_list.html.erb
@@ -51,7 +51,7 @@ function changeresulttype() {
 	<ul>
 		<% if @executions != nil then if @executions.count != 0 then %>
 			<table class="table table-striped table-bordered table-condensed">
-				<tr><td>Case Name</td><td>Result</td><td>More Result Info</td><td>Tester</td><td></td></tr>
+				<tr><td>Case Name</td><td>SW Env</td><td>Result</td><td>More Result Info</td><td>Tester</td><td></td></tr>
 				<% @index = 1 %>
 				<% @executions.each do |d| %>
 					<tr>
