--- a/app/views/executions/_testcases_list.html.erb
+++ b/app/views/executions/_testcases_list.html.erb
@@ -48,6 +48,7 @@ function changeresulttype() {
 	<br>
 	<hr>
 	<br>
+	<h2>Recent 10 Executions</h2>
 	<ul>
 		<% if @executions != nil then if @executions.count != 0 then %>
 			<table class="table table-striped table-bordered table-condensed">
