--- a/app/views/tasks/_detail_list.html.erb
+++ b/app/views/tasks/_detail_list.html.erb
@@ -164,15 +164,24 @@
 										<% currentexecutions = thematrix.select { |mx| mx.device_id == d.device_id and  mx.testcase_id == c.testcase_id } %>
 										<% if currentexecutions.count != 0 then %>
 											<% currentexecutions.each do |m| %>
-												<% m.devices.each do |dev| 
-													@realdevicelist = Array.new
-													@realdevicelist << dev.id end %>
-												<% if @realdevicelist.include? dep.device.id then %>
-													<% if m.execution.result == "fail" then %>
-														<font color=red>x(cr:<%= m.execution.bug %>)</font>
-													<% else %>
-														<font color=green>v</font>
-													<% end %>
+												<% @realdevicelist = Array.new %>
+												<% m.devices.each do |dev| %>
+													<% @realdevicelist << dev.name %>
+												<% end %>
+													<font onmouseover="ShowContent('<%= m.execution.id %>');" onmouseout="HideContent('<%= m.execution.id %>');">
+														<% if @realdevicelist.include? dep.device.name then %>
+														<% if m.execution.result == "fail" then %>
+															<font color=red>x(cr:<%= m.execution.bug %>)</font>
+														<% else %>
+															<font color=green>v</font>
+														<% end %>
+													</font>
+													<div id='<%= m.execution.id %>' class="showmoreinfo">
+														<%= m.execution.user.email %><br>
+														<% @realdevicelist.each do |rdname| %>
+															<%= rdname %><br>
+														<% end %>
+													</div>
 												<% end %>
 											<% end %>
 										<% end %>
