--- a/app/views/tasks/_detail_list.html.erb
+++ b/app/views/tasks/_detail_list.html.erb
@@ -20,7 +20,7 @@
 </div>
 
 <% if @taskobjects != nil then %>
-		
+
 <% else %>
 	<div class="alarmtext center">No test targets existed!</div>
 <% end %>
@@ -82,7 +82,87 @@
 				<% end %>
 			</div>
 			
-
+			<table class="table table-bordered table-condensed">
+				<% @colum = 0 %>
+				<tr>
+<!-- First line is testcase list -->
+					<td></td>
+					<% if @envdepdevices != nil then%>
+						<% depexist = true %>
+						<td></td>
+					<% end %>
+					<% @envtestcases.each do |c| %>
+						<td>
+							<% if current_user.lead? then %>
+								<%= link_to c.name, c, method: :delete, data: { confirm: "Sure?" }, class: "" %>
+							<% else %>
+								<%= c.name %>
+							<% end %>
+						</td>
+						<% @colum = @colum + 1 %>
+					<% end %>
+				</tr>
+<!-- Draw each lines -->				
+				<% @envdevices.each do |d| %>
+					<tr>
+	<!-- The first row -->
+						<td>
+							<% if current_user.lead? then %>
+								<%= link_to d.name, d, method: :delete, data: { confirm: "Sure?" }, class: "" %>
+							<% else %>
+								<%= d.name %>
+							<% end %>
+						</td>
+						<% if !depexist then %> 
+							<td>Over All</td> 
+							<% @envtestcases.each do |c| %>
+								<td>
+	<!-- test total result will be filled here, a new line -->
+									<% currentexecutions = @thematrix.select { |mx| mx.device_id == d.id and  mx.testcase_id == c.id } %>
+									<% if currentexecutions.count != 0 then %>
+										<% currentexecutions.each do |m| %>
+											<% if m.execution.result == "fail" then %>
+												<font color=red>x</font>
+											<% else %>
+												<font color=green>v</font>
+											<% end %>
+										<% end %>
+									<% end %>
+								</td>
+							<% end %>
+						</tr>
+<!-- test environment result, if there're any,  will be filled here -->
+					<% else %> 
+						<td></td>
+						<% @envtestcases.each do %><td></td><% end %>
+						</tr>
+						<% @envdepdevices.each do |dep| %>
+							<tr><td></td>
+								<td><%= link_to dep.name, dep, method: :delete, data: { confirm: "Sure?" }, class: "" %></td>
+								<% @envtestcases.each do |c| %>
+									<td>
+										<% currentexecutions = @thematrix.select { |mx| mx.device_id == d.id and mx.envdevice_id == dep.id and mx.testcase_id == c.id } %>
+										<% if currentexecutions.count != 0 then %>
+											<% currentexecutions.each do |em| %>
+												<font onmouseover="ShowContent('<%= em.execution.id %>');" onmouseout="HideContent('<%= em.execution.id %>');">
+													<% if em.execution.result == "fail" then %>
+														<%= link_to 'x'+"(cr:"+em.execution.bug+")", edit_execution_path(em.execution),:onclick=>"window.open(this.href,'create_company', 'height=600, width=600');return false;" %>
+													<% else %>
+														<%= link_to "v", edit_execution_path(em.execution),:onclick=>"window.open(this.href,'create_company', 'height=600, width=600');return false;" %>
+													<% end %>
+												</font>
+												<div id='<%= em.execution.id %>' class="showmoreinfo">
+													<%= em.execution.user.email %><br>
+												</div>
+											<% end %>
+										<% end %>
+									</td>
+								<% end %>
+							</tr>
+						<% end %>
+					<% end %>
+				<% end %>		
+			</table>
 		<% end %>
 	<% else %>
 			<div class="alarmtext center">Select A target first!</div>
