--- a/app/views/achivements/_engineer.html.erb
+++ b/app/views/achivements/_engineer.html.erb
@@ -2,21 +2,21 @@
 <div class="weeklystatus">
 
 	<% if @targets != nil then %>
-		<% if @myexecutions != nil then %>
-			<% @targets.each do |target| %>
-				&nbsp;&nbsp;&nbsp;* <%= target.task.name if target.task != nil %> <%= target.name %><br>
-				<% if target.env != nil then %>
-					<% @myexecutions.each do |me| %>
-						<% if target.env.testcases.include? me.testcase and !(target.env.devices & me.realconfig).empty? then %>
-							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;* <%= me.testcase.name %> <%= me.device.name if me.device != nil %> on <%= me.sysconfig.sut.name %><br>
-						<% end %>
-					<% end %>
+		<% @resultarray.each do |result|%>
+		<% tmpos = "" %>
+			&nbsp;&nbsp;&nbsp;* <%= result[:title] %><br>
+			<% result[:secondlevel].each do |secondresult|%>
+				<% if secondresult[:os] != tmpos then %>
+					<% tmpos = secondresult[:os] %>
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;* <%= secondresult[:os] %><br>
 				<% end %>
-			<% end %>	
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;* <%= secondresult[:title] %><br>
+			<% end %>
 		<% end %>
 	<% else %>
 		<div class="span8">Never Run Any Testcases<%= c.sut_id %></div>
 	<% end %>
+	
 </div>
 
 <br><h2>System Configuration</h2>
