--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,6 +52,7 @@
     <title>ANTON - Save U from mess!</title>
     <%= stylesheet_link_tag    "application", media: "all" %>
     <%= javascript_include_tag "application" %>
+	<%= javascript_include_tag "defaults" %>
 	<%= javascript_include_tag "prototype" %>
     <%= csrf_meta_tags %>
     <!--[if lt IE 9]>
